test/files/neg/unchecked-abstract.check
unchecked-abstract.scala:16: error: abstract type H in type Contravariant[M.this.H] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Contravariant[H]])
                                       ^
unchecked-abstract.scala:21: error: abstract type H in type Contravariant[M.this.H] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Contravariant[H]])
                                       ^
unchecked-abstract.scala:27: error: abstract type T in type Invariant[M.this.T] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Invariant[T]])
                                       ^
unchecked-abstract.scala:28: error: abstract type L in type Invariant[M.this.L] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Invariant[L]])
                                       ^
unchecked-abstract.scala:31: error: abstract type H in type Invariant[M.this.H] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Invariant[H]])
                                       ^
unchecked-abstract.scala:33: error: abstract type L in type Invariant[M.this.L] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Invariant[L]])
                                       ^
unchecked-abstract.scala:36: error: abstract type H in type Invariant[M.this.H] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Invariant[H]])
                                       ^
unchecked-abstract.scala:37: error: abstract type T in type Invariant[M.this.T] is unchecked since it is eliminated by erasure
    /*   warn */ println(x.isInstanceOf[Invariant[T]])
                                       ^
8 errors found
